[package]
name = "realtor-rs"
version = "0.1.0"
authors = ["Toby Murray <toby.murray@protonmail.com>"]
edition = "2018"
description = "Unofficial client for Canadian Realtor site"
license = "CC-BY-NC-4.0"
documentation = "https://docs.rs/crate/realtor-rs/"
readme = "README.md"
repository = "https://github.com/tobymurray/realtor-rs"
keywords = ["realtor", "api", "client", "wrapper", "house", "listing", "mls"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.2"