[package]
name = "realtor-rs"
version = "0.5.0"
authors = ["Toby Murray <toby.murray@protonmail.com>"]
edition = "2018"
description = "Unofficial client for Canadian Realtor site"
license = "CC-BY-NC-4.0"
documentation = "https://docs.rs/crate/realtor-rs/"
readme = "README.md"
repository = "https://github.com/tobymurray/realtor-rs"
keywords = ["realtor", "api", "client", "house", "listing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"